src/view/browser/render/snapshots/nifi_lens__view__browser__render__port__snapshots__port_detail_input_port_renders.snap
---
source: src/view/browser/render/port.rs
expression: "format!(\"{}\", term.backend())"
---
"┌ external-ingest · input port · RUNNING ──────────────────────────────────────────────────────────┐"
"│┌ Identity ──────────────────────────────────────────────────────────────────────────────────────┐│"
"││kind            input                                                                           ││"
"││state           RUNNING                                                                         ││"
"││parent group    root                                                                            ││"
"││concurrent tasks 3                                                                              ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌ Recent bulletins ─────────────────────────────────────────────────────────────────────────── 0 ┐│"
"││TIME                   SEV  MESSAGE                                                             ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
