src/view/browser/render/snapshots/nifi_lens__view__browser__render__port__snapshots__port_detail_output_port_renders_without_comments.snap
---
source: src/view/browser/render/port.rs
expression: "format!(\"{}\", term.backend())"
---
"┌ downstream · output port · STOPPED ──────────────────────────────────────────────────────────────┐"
"│┌ Identity ──────────────────────────────────────────────────────────────────────────────────────┐│"
"││kind            output                                                                          ││"
"││state           STOPPED                                                                         ││"
"││parent group    ingest                                                                          ││"
"││comments        —                                                                               ││"
"││concurrent tasks 1                                                                              ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌ Recent bulletins ─────────────────────────────────────────────────────────────────────────── 0 ┐│"
"││TIME                   SEV  MESSAGE                                                             ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
