src/view/browser/render/snapshots/nifi_lens__view__browser__render__port__snapshots__port_detail_parent_group_resolved_to_name.snap
---
source: src/view/browser/render/port.rs
expression: out
---
"┌ external-ingest · input port · RUNNING ──────────────────────────────────────────────────────────┐"
"│┌ Identity ──────────────────────────────────────────────────────────────────────────────────────┐│"
"││kind            input                                                                           ││"
"││state           RUNNING                                                                         ││"
"││parent group    ingress-pg                                                                      ││"
"││comments        edge ingress                                                                    ││"
"││concurrent tasks 3                                                                              ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"│┌ Recent bulletins ─────────────────────────────────────────────────────────────────────────── 0 ┐│"
"││TIME                   SEV  MESSAGE                                                             ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"││                                                                                                ││"
"│└────────────────────────────────────────────────────────────────────────────────────────────────┘│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
